--- a/Psicologia/templates/PsicologiaCreate.html
+++ b/Psicologia/templates/PsicologiaCreate.html
@@ -25,6 +25,12 @@
                                 <div class="card-content">
                                         <div class="row">
                                                 <div class="col-md-4">
+                                                        <h4 class="card-title">Seleccione el paciente</strong>
+                                                        <h6>Lista de adultos </h6>
+							{{form.pacienteAdulto}}
+                                                        <h6>Lista de Niños </h6>
+                                                        {{form.pacienteNiño}}
+                                                        
                                                         <ul class="nav nav-pills nav-pills-icons nav-pills-rose nav-stacked" role="tablist">
                                                                 <!--color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"-->
                                                                 <li class="active">
