--- a/Psicologia/templates/Psicologia_confirm_delete.html
+++ b/Psicologia/templates/Psicologia_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'baseAdmin.html' %}
 
 {% block maincontent %}
     <form action="" method="post">{% csrf_token %}
