--- a/aperturaNinos/templates/ninoBase.html
+++ b/aperturaNinos/templates/ninoBase.html
@@ -25,7 +25,9 @@
                             <th>Servicio</th>
                             <th>Remite</th>
                             <th>Fecha de ingreso</th>
+                             {% if perms.aperturaNinos.add_historianiño  %}
                             <th class="disabled-sorting text-right">Acciones</th>
+                            {% endif  %}
                         </tr>
                     </thead>
                     <tbody>
@@ -39,12 +41,12 @@
                             <td>{{ p.remitido_por}}</td>
                             <td>{{ p.fecha_ingreso}}</td>
                             
-                            
+                             {% if perms.aperturaNinos.add_historianiño  %}
                             <td class="text-right">
-                                <a href="#" class="btn btn-simple btn-success btn-icon like"><i class="material-icons">add</i></a>
                                 <a href="{% url 'nino-update' p.pk %}" class="btn btn-simple btn-info btn-icon like"><i class="material-icons">person</i></a>
                                 <a href="{% url 'nino-delete' p.pk %}" class="btn btn-simple btn-danger btn-icon remove"><i class="material-icons">close</i></a>
                             </td>
+                            {% endif  %}
                         </tr>
                         {% endfor %}
                        
