--- a/Psicologia/templates/PsicologiaBase.html
+++ b/Psicologia/templates/PsicologiaBase.html
@@ -2,24 +2,55 @@
 
 
 {% block content %}
-<div class="row well">
-    {% for p in psico_list.all %}
-        <div class="col-md-4 well">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title" >{{ p.Historia_No}}</h3>
-                </div>
-
-                <div class="panel-body">
-                    {{p.fecha}}
-                </div>
-              
-
-                <div class="panel-body">
-                    <a class="btn btn-success" href="{% url 'psico-update' p.id %}">Editar</a>
-                </div>
-    </div>
+<div class="col-md-12">
+    <div class="card">
+        <div class="card-header card-header-icon" data-background-color="purple">
+            <i class="material-icons">assignment</i>
         </div>
-    {% endfor %}
+        <div class="card-content">
+            <h4 class="card-title">Lista de pacientes de Psicologia <b> Adultos</b></h4>
+            <div class="toolbar">
+                <!--        Here you can write extra buttons/actions for the toolbar              -->
+            </div>
+            <div class="material-datatables">
+                <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Identificacion</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Remite</th>
+                            <th>Fecha de ingreso</th>
+                            <th>Motivo de Consulta</th>
+                            
+                            <th class="disabled-sorting text-right">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for p in psico_list.all %}
+                        <tr>
+                            <td>{{ p.pacienteAdulto.identificacion}}</td>
+                            <td>{{ p.pacienteAdulto.primer_nombre}}</td>
+                            <td>{{ p.pacienteAdulto.primer_apellido}}</td>
+                            <td>{{ p.pacienteAdulto.remitido_por}}</td>
+                            <td>{{ p.pacienteAdulto.ingreso}}</td>
+                            <td>{{ p.pacienteAdulto.motivo_consulta}}</td>
+                            
+                            
+                            <td class="text-right">
+                               
+                                <a href="{% url 'psico-update' p.pk %}" class="btn btn-simple btn-info btn-icon like"><i class="material-icons">person</i></a>
+                                <a href="{% url 'psico-delete' p.pk %}" class="btn btn-simple btn-danger btn-icon remove"><i class="material-icons">close</i></a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- end content-->
+    </div>
+    <!--  end card  -->
 </div>
 {% endblock content %}
