--- a/PsicologiaMenores/templates/PsicologiaMenorBase.html
+++ b/PsicologiaMenores/templates/PsicologiaMenorBase.html
@@ -1,28 +1,56 @@
-{% extends 'base.html' %}
+{% extends 'baseAdmin.html' %}
 
-{% block section %}
-    <h2>Lista de pacientes con una Historia de Pscicologia</h2>
-    <hr>
-{% endblock section %}
 
-{% block maincontent %}
-<div class="row well">
-    {% for p in psicoMenor_list.all %}
-        <div class="col-md-4 well">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title" ></h3>
-                </div>
-
-                <div class="panel-body">
-                </div>
-              {{p.fecha}}
-
-                <div class="panel-body">
-                    <a class="btn btn-success" href="{% url 'psicoMenor-update' p.id %}">Editar</a>
-                </div>
-    </div>
+{% block content %}
+<div class="col-md-12">
+    <div class="card">
+        <div class="card-header card-header-icon" data-background-color="purple">
+            <i class="material-icons">assignment</i>
         </div>
-    {% endfor %}
+        <div class="card-content">
+            <h4 class="card-title">Lista de pacientes de Psicologia <b> Menores de edad</b></h4>
+            <div class="toolbar">
+                <!--        Here you can write extra buttons/actions for the toolbar              -->
+            </div>
+            <div class="material-datatables">
+                <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Identificacion</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Remite</th>
+                            <th>Fecha de ingreso</th>
+                            <th>Motivo de Consulta</th>
+                            
+                            <th class="disabled-sorting text-right">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for p in psicoMenor_list.all %}
+                        <tr>
+                            <td>{{ p.pacienteNiño.identificacion}}</td>
+                            <td>{{ p.pacienteNiño.primer_nombre}}</td>
+                            <td>{{ p.pacienteNiño.primer_apellido}}</td>
+                            <td>{{ p.pacienteNiño.remitido_por}}</td>
+                            <td>{{ p.pacienteNiño.fecha_ingreso}}</td>
+                            <td>{{ p.pacienteNiño.motivo_consulta}}</td>
+                            
+                            
+                            <td class="text-right">
+                                <a href="#" class="btn btn-simple btn-success btn-icon like"><i class="material-icons">add</i></a>
+                                <a href="{% url 'psicoMenor-update' p.pk %}" class="btn btn-simple btn-info btn-icon like"><i class="material-icons">person</i></a>
+                                <a href="{% url 'psicoMenor-delete' p.pk %}" class="btn btn-simple btn-danger btn-icon remove"><i class="material-icons">close</i></a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- end content-->
+    </div>
+    <!--  end card  -->
 </div>
-{% endblock maincontent %}
+{% endblock content %}
