--- a/TerapiaOcupacional/templates/TerapiaOcupacional/terapiaocupacional_form.html
+++ b/TerapiaOcupacional/templates/TerapiaOcupacional/terapiaocupacional_form.html
@@ -16,7 +16,7 @@
 			<div class="card">
 				
 				<div class="card-header">
-					<h4 class="card-title">Formulario de  <strong>terapia ocupacional.</strong>
+					<h4 class="card-title">Formulario de  <strong>Terapia Ocupacional</strong>
 						
 					</h4>
 				</div>
@@ -24,8 +24,13 @@
 				<div class="card-content">
 					<div class="row">
 						<div class="col-md-4">
-							<h4 class="card-title">Seleccione el paciente</strong>
-							{{form.paciente}}
+							<h4 class="card-title">Seleccione un paciente Adulto</strong>
+								{{form.pacienteAdulto}}
+							</h4>
+							<h4 class="card-title">Seleccione un paciente Menor</strong>
+								{{form.pacienteNiño}}
+							</h4>
+							
 							<ul class="nav nav-pills nav-pills-icons nav-pills-rose nav-stacked" role="tablist">
 								<!--color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"-->
 								<li class="active">
@@ -188,10 +193,11 @@
 					</div>
 				</div>
 			</div>
+			<button type="submit" class="btn btn-success">Enviar</button>
+			<a href="{% url 'terapia-lista' %}" class="btn btn-danger">Cancelar</a>
 		</div>
 	</div>
-	<button type="submit" class="btn btn-success">Enviar</button>
-	<a href="{% url 'terapia-lista' %}" class="btn btn-danger">Cancelar</a>
+	
 </form>
 
 {% endblock content%}
